# coin-autopilot

./: .gitignore  CLAUDE.md  DESIGN.md  HANDOFF.md  PLAN.md  README.md  TODOS.md  package-lock.json
.claude/: settings.local.json
PRD/: 01_PRODUCT_VISION.md  02_ORCHESTRATOR_SPEC.md  03_DATA_ARCHITECTURE.md  04_RESEARCH_LOOP_SPEC.md  05_PAPER_TRADING_SPEC.md  06_RISK_MANAGEMENT_SPEC.md  07_DASHBOARD_SPEC.md  08_ALERTS_AND_NOTIFICATIONS.md  09_KOREAN_STOCK_SPEC.md  10_EXECUTION_ENGINE_SPEC.md  11_USER_PLATFORM_SPEC.md  12_SCHEMA_AND_API_CONTRACT.md  13_IMPLEMENTATION_ROADMAP.md  CURRENT_IMPLEMENTATION_AUDIT.md  FEATURE_SPEC.md  FEATURE_SPEC_V2.md  FEATURE_TEMPLATE.md  README.md  STRATEGY_RESEARCH.md
agent/: CMakeLists.txt  vcpkg.json
agent/config/: config.example.yaml
agent/src/: main.cpp
agent/src/comm/: grpc_reporter.cpp  grpc_reporter.hpp
agent/src/core/: config.cpp  config.hpp  engine.cpp  engine.hpp  types.hpp
agent/src/data/: candle_store.cpp  candle_store.hpp  market_data.cpp  market_data.hpp
agent/src/exchange/: exchange_base.hpp
agent/src/exchange/okx/: okx_auth.cpp  okx_auth.hpp  okx_client.cpp  okx_client.hpp  okx_ws.cpp  okx_ws.hpp
agent/src/exchange/upbit/: upbit_auth.cpp  upbit_auth.hpp  upbit_client.cpp  upbit_client.hpp  upbit_ws.cpp  upbit_ws.hpp
agent/src/indicator/: indicator_engine.cpp  indicator_engine.hpp
agent/src/order/: order_manager.cpp  order_manager.hpp  order_types.hpp
agent/src/risk/: position_sizer.cpp  position_sizer.hpp  risk_manager.cpp  risk_manager.hpp
agent/src/strategy/: alt_mean_reversion.cpp  alt_mean_reversion.hpp  btc_regime_filter.cpp  btc_regime_filter.hpp  dominance_rotation.cpp  dominance_rotation.hpp  funding_arbitrage.cpp  funding_arbitrage.hpp  strategy_base.hpp  volatility_timing.cpp  volatility_timing.hpp
agent/tests/: test_indicators.cpp  test_risk.cpp  test_strategies.cpp
proto/: autopilot.proto
server/: .env.example  package-lock.json  package.json  tsconfig.json
server/scripts/: start-public-with-vercel-sync.sh
server/src/: index.ts
server/src/core/: auth.ts  cron.ts  types.ts
server/src/data/: candle-collector.ts  market-data.ts  market-summary.ts  regime-detector.ts  v2-candle-collector.ts  v2-regime-detector.ts
server/tests/: api-routes.test.ts  backtest-engine.test.ts  detector.test.ts  execution-engine.test.ts  factory.test.ts  indicator-engine.test.ts  paper-engine-load-strategy.test.ts  research-pipeline.test.ts  strategy.test.ts
supabase/migrations/: 20260328_detection_cache.sql  20260402_v2_schema.sql  20260402_v2_security_and_fixes.sql  20260404_schema.sql  20260405_active_params.sql  20260406_performance_indexes.sql  20260406_research_pipeline.sql  20260407_ai_reviews.sql  20260407_user_settings.sql  20260408_decision_status_fix.sql
web/: .env.example  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
(+131 files in other folders)
